bbm-team/vaccinator-be/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaccinator-be
spec:
  replicas: 2
  selector:
    matchLabels:
      pod: vaccinator-be-label
  template:
    metadata:
      labels:
        pod: vaccinator-be-label
    spec:
      containers:
        - name: vaccinator-be-container
          image: wacteambbm/wac-project-be:1.0.63
          imagePullPolicy: Always
          ports:
            - name: webapi-port
              containerPort: 8080
          resources:
            requests:
              memory: "32Mi"
              cpu: "0.1"
            limits:
              memory: "128Mi"
              cpu: "0.3"
