bbm-team/vaccinator-be/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: vaccinator-be
spec:
  type: ClusterIP
  selector:
    pod: vaccinator-be-label
  ports:
    - name: webapi-s-port
      protocol: TCP
      port: 80
      targetPort: 8080
