bbm-team/vaccinator-be/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaccinator-be
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /api/$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: wac-hospital
  rules:
    - http:
        paths:
          - path: /vaccinator-be(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: vaccinator-be
                port:
                  name: webapi-s-port
